load("@pip_deps//:requirements.bzl", "requirement")

package(
    default_testonly = 1,
    default_visibility = ["//:__subpackages__"],
)

licenses(["notice"])

py_test(
    name = "rsa_ssa_pkcs1_test",
    srcs = ["rsa_ssa_pkcs1_test.py"],
    deps = [
        requirement("absl-py"),
        "//cross_language/tink_config",
        "//cross_language/util:testing_servers",
        "@tink_py//tink:tink_python",
        "@tink_py//tink/proto:common_py_pb2",
        "@tink_py//tink/proto:rsa_ssa_pkcs1_py_pb2",
        "@tink_py//tink/proto:tink_py_pb2",
    ],
)

py_library(
    name = "ecdsa_keys",
    srcs = ["ecdsa_keys.py"],
    deps = [
        "//cross_language:test_key",
        "//cross_language/util:utilities",
        "@tink_py//tink/proto:common_py_pb2",
        "@tink_py//tink/proto:ecdsa_py_pb2",
        "@tink_py//tink/proto:tink_py_pb2",
    ],
)

py_library(
    name = "ed25519_keys",
    srcs = ["ed25519_keys.py"],
    deps = [
        "//cross_language:test_key",
        "//cross_language/util:utilities",
        "@tink_py//tink/proto:common_py_pb2",
        "@tink_py//tink/proto:ed25519_py_pb2",
        "@tink_py//tink/proto:tink_py_pb2",
    ],
)

py_test(
    name = "creation_consistency_test",
    srcs = ["creation_consistency_test.py"],
    deps = [
        ":ecdsa_keys",
        ":ed25519_keys",
        requirement("absl-py"),
        "//cross_language:test_key",
        "//cross_language/tink_config",
        "//cross_language/util:testing_servers",
        "@tink_py//tink:tink_python",
        "@tink_py//tink/proto:tink_py_pb2",
    ],
)

py_test(
    name = "evaluation_consistency_test",
    srcs = ["evaluation_consistency_test.py"],
    deps = [
        ":ecdsa_keys",
        ":ed25519_keys",
        requirement("absl-py"),
        "//cross_language:test_key",
        "//cross_language/tink_config",
        "//cross_language/util:testing_servers",
        "@tink_py//tink:tink_python",
        "@tink_py//tink/proto:tink_py_pb2",
    ],
)
