load("@pip_deps//:requirements.bzl", "requirement")

package(
    default_testonly = 1,
    default_visibility = ["//:__subpackages__"],
)

licenses(["notice"])

py_test(
    name = "aes_ctr_hmac_streaming_key_test",
    srcs = ["aes_ctr_hmac_streaming_key_test.py"],
    deps = [
        "//cross_language/tink_config",
        "//cross_language/util:testing_servers",
        "//cross_language/util:utilities",
        "@tink_py//tink/testing:keyset_builder",
        requirement("absl-py"),
        "@tink_py//tink:tink_python",
        "@tink_py//tink/proto:aes_ctr_hmac_streaming_py_pb2",
        "@tink_py//tink/proto:common_py_pb2",
        "@tink_py//tink/proto:hmac_py_pb2",
        "@tink_py//tink/proto:tink_py_pb2",
        "@tink_py//tink/streaming_aead",
    ],
)

py_test(
    name = "aes_gcm_hkdf_streaming_key_test",
    srcs = ["aes_gcm_hkdf_streaming_key_test.py"],
    deps = [
        "//cross_language/tink_config",
        "//cross_language/util:testing_servers",
        "//cross_language/util:utilities",
        "@tink_py//tink/testing:keyset_builder",
        requirement("absl-py"),
        "@tink_py//tink:tink_python",
        "@tink_py//tink/proto:aes_gcm_hkdf_streaming_py_pb2",
        "@tink_py//tink/proto:common_py_pb2",
        "@tink_py//tink/proto:tink_py_pb2",
        "@tink_py//tink/streaming_aead",
    ],
)
