load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testing_api_go_grpc",
    srcs = [
        "testing_api.pb.go",
        "testing_api_grpc.pb.go",
    ],
    importpath = "github.com/tink-crypto/tink-cross-lang-tests/go/protos/testing_api_go_grpc",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

alias(
    name = "go_default_library",
    actual = ":testing_api_go_grpc",
    visibility = ["//visibility:public"],
)
